--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,4 +6,17 @@
   <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
   <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+  <link href="{{ '/assets/css/lightbox.css' | relative_url }}" rel="stylesheet">
+  <script src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
+  <link href="{{ '/assets/css/gallery.css' | relative_url }}" rel="stylesheet">
+  <script>
+    document.addEventListener("DOMContentLoaded", function() {
+      lightbox.option({
+        'resizeDuration': 200,
+        'wrapAround': true,
+        'alwaysShowNavOnTouchDevices': true,
+        'albumLabel': "Image %1 of %2",
+      });
+    });
+  </script>
 </head>
