--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,8 +7,9 @@
   <script type="text/javascript" id="MathJax-script" async
     src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
   <link href="{{ '/assets/css/lightbox.css' | relative_url }}" rel="stylesheet">
-  <script src="{{ '/assets/js/lightbox.js' | relative_url }}"></script>
   <link href="{{ '/assets/css/gallery.css' | relative_url }}" rel="stylesheet">
+  <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+  <script src="{{ '/assets/js/lightbox-plus-jquery.min.js' | relative_url }}"></script>
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       lightbox.option({
