--- a/_layouts/footer.html
+++ b/_layouts/footer.html
@@ -1,6 +1,5 @@
 <footer>
   <div class="wrapper">
-    <h2 class="footer-heading">{{ site.title }}</h2>
     <div class="footer-col-wrapper">
       <div class="footer-col footer-col-1">
         <ul class="contact-list">
@@ -12,6 +11,7 @@
         <ul class="social-media-list">
           <li><a href="https://github.com/{{ site.github_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github_username }}</span></a></li>
           <li><a href="https://instagram.com/{{ site.instagram_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#instagram' | relative_url }}"></use></svg> <span class="username">{{ site.instagram_username }}</span></a></li>
+          <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username }}</span></a></li>
         </ul>
       </div>
       <div class="footer-col footer-col-3">
