--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -13,6 +13,8 @@
       </div>
     </main>
 
+    <div class="footer-divider"></div> <!-- Custom divider -->
+
     {%- include footer.html -%}
 
   </body>
