--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -689,12 +689,12 @@ body {
   margin: 20px 0; /* Adjust the margin as needed */
   background-color: #f9f9f9; /* Light gray background */
   text-align: center; /* Center align the text */
-  font-style: italic; /* Italic text */
-  font-family: 'Noto Sans SC', sans-serif; /* Use the Chinese font for consistency */
+  font-style: normal; /* Italic text */
+  font-family: 'Hiragino Sans GB', sans-serif; /* Use the Chinese font for consistency */
 }
 
 .quote-box h2 {
-  font-size: 24px; /* Adjust the font size as needed */
+  font-size: 20px; /* Adjust the font size as needed */
   margin-bottom: 10px;
 }
 
@@ -703,4 +703,15 @@ body {
   margin: 0;
 }
 
+.final-quote {
+  border-left: 4px solid #f4f4f4; /* Light gray border on the left */
+  padding: 10px 20px;
+  margin: 20px 0; /* Adjust the margin as needed */
+  background-color: #f4f4f4; /* Light gray background */
+  font-style: bold; /* Italic text */
+  text-align: center;
+  font-size: 20px;
+  font-family: 'Hiragino Sans GB', sans-serif; /* Use the Chinese font for consistency */
+  color: #000000; /* Text color */
+}
 /*# sourceMappingURL=main.css.map */
