--- a/_includes/header.html
+++ b/_includes/header.html
@@ -14,9 +14,13 @@
                 {% for link in site.nav_links %}
                     <a class="page-link" href="{{ link.link }}">{{ link.name }}</a>
                 {% endfor %}
-                <button id="dark-mode-toggle" class="dark-mode-button">
-                    <img id="dark-mode-icon" src="{{ '/assets/images/moon-icon.png' | relative_url }}" alt="Dark Mode" />
-                </button>
+                <div class="toggle-container">
+                    <input type="checkbox" id="dark-mode-toggle" onclick="toggleDarkMode()">
+                    <label for="dark-mode-toggle" class="toggle-label">
+                        <span class="toggle-icon sun-icon"></span>
+                        <span class="toggle-icon moon-icon"></span>
+                    </label>
+                </div>
             </div>
         </nav>
     </div>
