--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -262,24 +262,24 @@ table td {
     border: 1px solid #e8e8e8;
     border-radius: 5px;
     text-align: center;
-    width: 100%; /* Make the nav bar full width */
-    max-width: 300px; /* Set a maximum width */
+    width: auto; /* Make the nav bar width auto */
+    padding: 5px 10px; /* Add some padding for better appearance */
   }
   .site-nav label[for=nav-trigger] {
     display: block;
     float: right;
     width: 36px;
-    height: 36px;
+    height: 30px;
     z-index: 2;
     cursor: pointer;
   }
   .site-nav .menu-icon {
     display: block;
-    float: right;
+    float: center;
     width: 36px;
     height: 26px;
     line-height: 0;
-    padding-top: 10px;
+    padding-top: 8px;
     text-align: center;
   }
   .site-nav .menu-icon > svg {
@@ -295,7 +295,8 @@ table td {
   }
   .site-nav .page-link {
     display: block;
-    padding: 10px 0; /* Increase padding for better touch targets */
+    padding: 5px 0; /* Adjust padding for better spacing */
+    margin-left: 0;
     text-align: center;
   }
   .site-nav .page-link:not(:last-child) {
