--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -13,8 +13,8 @@ dl, dd, ol, ul, figure {
  */
 body {
   font: 400 16px/1.5 -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  color: #111;
-  background-color: #fdfdfd;
+  color: #1d1d1f;
+  background-color: #f5f5f7;
   -webkit-text-size-adjust: 100%;
   -webkit-font-feature-settings: "kern" 1;
   -moz-font-feature-settings: "kern" 1;
@@ -85,7 +85,7 @@ h1, h2, h3, h4, h5, h6 {
  * Links
  */
 a {
-  color: #0071e3;
+  color: #0071e3de;
   text-decoration: none;
 }
 a:visited {
@@ -93,13 +93,13 @@ a:visited {
 }
 a:hover {
   color: #0077ed;
-  text-decoration: underline;
+  text-decoration: none;
 }
 .social-media-list a:hover {
   text-decoration: none;
 }
 .social-media-list a:hover .username {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 /**
@@ -216,7 +216,7 @@ table td {
 /**
  * Site header
  */
-.site-header {
+ .site-header {
   border-top: 0px solid #424242;
   border-bottom: 0.7px solid #505050;
   min-height: 55.95px;
@@ -230,15 +230,25 @@ table td {
   letter-spacing: -1px;
   margin-bottom: 0;
   float: left;
+  text-decoration: none;
+  color: #323232 !important; /* Bright mode text color */
 }
-.site-title, .site-title:visited {
-  color: #505050;
+
+.site-title:hover, .site-title:visited:hover {
+  color: #000000 !important; /* Bright mode hover color */
+  text-decoration: none; /* Remove underline */
 }
 
 .site-nav {
   float: right;
   line-height: 54px;
 }
+
+.dark-mode .site-nav a:hover {
+  color: #ffffff;
+  text-decoration: none;
+}
+
 .site-nav .nav-trigger {
   display: none;
 }
@@ -246,9 +256,35 @@ table td {
   display: none;
 }
 .site-nav .page-link {
-  color: #505050;
+  color: #323232 !important; /* Bright mode text color */
   line-height: 1.5;
+  text-decoration: none;
 }
+
+.site-nav .page-link:hover {
+  color: #000000 !important; /* Bright mode hover color */
+  text-decoration: none; /* Remove underline */
+}
+
+/* Dark mode styles */
+.dark-mode .site-title {
+  color: #d0d0d1 !important; /* Dark mode text color */
+}
+
+.dark-mode .site-title:hover, .dark-mode .site-title:visited:hover {
+  color: #ffffff !important; /* Dark mode hover color */
+  text-decoration: none; /* Remove underline */
+}
+
+.dark-mode .site-nav .page-link {
+  color: #d0d0d1 !important; /* Dark mode text color */
+}
+
+.dark-mode .site-nav .page-link:hover {
+  color: #ffffff !important; /* Dark mode hover color */
+  text-decoration: none; /* Remove underline */
+}
+
 .site-nav .page-link:not(:last-child) {
   margin-right: 20px;
 }
@@ -258,7 +294,7 @@ table td {
     font-size: 13px;
     top: 9px;
     right: 15px;
-    background-color: #fdfdfd;
+    background-color: #ffffff;
     border: 1px solid #e8e8e8;
     border-radius: 5px;
     text-align: center;
@@ -298,6 +334,10 @@ table td {
     padding: 5px 0; /* Adjust padding for better spacing */
     margin-left: 0;
     text-align: center;
+  }
+
+  .dark-mode .site-nav .page-link {
+    color: #323232 !important; /* Keep the menu bar text color unchanged */
   }
   .site-nav .page-link:not(:last-child) {
     margin-right: 0;
@@ -714,6 +754,10 @@ body {
   font-family: 'Hiragino Sans GB', sans-serif; /* Use the Chinese font for consistency */
 }
 
+.dark-mode .quote-box {
+  background-color: #131313;
+}
+
 .quote-box h2 {
   font-size: 20px; /* Adjust the font size as needed */
   margin-bottom: 10px;
@@ -725,15 +769,23 @@ body {
 }
 
 .final-quote {
-  border-left: 4px solid #f4f4f4; /* Light gray border on the left */
+  border-left: 4px solid #ddd;
+  border-right: 4px solid #ddd; /* Light gray border on the left */
   padding: 10px 20px;
   margin: 20px 0; /* Adjust the margin as needed */
-  background-color: #f4f4f4; /* Light gray background */
+  background-color: #f9f9f9; /* Light gray background */
   font-style: bold; /* Italic text */
   text-align: center;
   font-size: 20px;
   font-family: 'Hiragino Sans GB', sans-serif; /* Use the Chinese font for consistency */
-  color: #000000; /* Text color */
+  color: #1d1d1f; /* Text color */
+}
+
+.dark-mode .final-quote {
+  border-left: 4px solid #232323;
+  border-right: 4px solid #232323;
+  background-color: #131313;
+  color: #d1d1d1;
 }
 
 /* Social buttons container */
