--- a/_layouts/english.html
+++ b/_layouts/english.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="zh">
+<html lang="en">
 <head>
   {%- include head.html -%}
 </head>
 <body>
-  {%- include header.html -%}
+  {%- include header-en.html -%}
   <main class="page-content" aria-label="Content">
     <div class="wrapper">
       {{ content }}
     </div>
   </main>
   <div class="footer-divider"></div> <!-- Custom divider -->
-  {%- include footer.html -%}
+  {%- include footer-en.html -%}
 </body>
 </html>
