--- a/_includes/footer-en.html
+++ b/_includes/footer-en.html
@@ -1,22 +1,31 @@
 <footer>
-    <div class="wrapper">
-      <div class="footer-col-wrapper">
-        <div class="footer-col footer-col-1">
-          <ul class="contact-list">
-            <li class="p-name">{{ site.title }}</li>
-            <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-          </ul>
-        </div>
-        <div class="footer-col footer-col-2">
-          <ul class="social-media-list">
-            <li><a href="https://github.com/{{ site.github_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github_username }}</span></a></li>
-            <li><a href="https://instagram.com/{{ site.instagram_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#instagram' | relative_url }}"></use></svg> <span class="username">{{ site.instagram_username }}</span></a></li>
-            <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username }}</span></a></li>
-          </ul>
-        </div>
-        <div class="footer-col footer-col-3">
-          <p>{{ site.description-en | markdownify }}</p>
-        </div>
+  <div class="wrapper">
+    <div class="footer-col-wrapper">
+      <div class="footer-col footer-col-1">
+        <ul class="contact-list">
+          <li class="p-name">{{ site.title }}</li>
+          <li><a class="u-email" href="mailto:{{ site.email }}">{{ site.email }}</a></li>
+          <li class="copyright">
+            &copy; {{ site.time | date: "%Y" }} {{ site.title }}. This work is licensed under a 
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
+              CC BY-NC-SA 4.0 International License
+            </a>.
+            <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">
+              <img src="https://licensebuttons.net/l/by-nc-sa/4.0/88x31.png" alt="CC BY-NC-SA 4.0 License" style="height: 20px; vertical-align: middle;">
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-col footer-col-2">
+        <ul class="social-media-list">
+          <li><a href="https://github.com/{{ site.github_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#github' | relative_url }}"></use></svg> <span class="username">{{ site.github_username }}</span></a></li>
+          <li><a href="https://instagram.com/{{ site.instagram_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#instagram' | relative_url }}"></use></svg> <span class="username">{{ site.instagram_username }}</span></a></li>
+          <li><a href="https://www.linkedin.com/in/{{ site.linkedin_username }}"><svg class="svg-icon"><use xlink:href="{{ '/assets/minima-social-icons.svg#linkedin' | relative_url }}"></use></svg> <span class="username">{{ site.linkedin_username }}</span></a></li>
+        </ul>
+      </div>
+      <div class="footer-col footer-col-3">
+        <p>{{ site.description-en | markdownify }}</p>
       </div>
     </div>
-  </footer>
+  </div>
+</footer>
