hover text effect

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -14,6 +14,9 @@
   <link href="{{ '/assets/css/gallery.css' | relative_url }}" rel="stylesheet">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="{{ '/assets/js/lightbox-plus-jquery.min.js' | relative_url }}"></script>
+  <link rel="icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+ <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+ <link rel="apple-touch-icon" sizes="180x180" href="{{ '/apple-touch-icon.png' | relative_url }}">
   <script>
     document.addEventListener("DOMContentLoaded", function() {
       lightbox.option({
